ProjectoPracticoISI/force-app/main/default/objects/Migame__c/Migame__c.object-meta.xml
<CustomObject>
    <label>⚙️(trigger) Migame</label>
    <nameField>
        <displayFormat>G-{000}</displayFormat>
        <label>Nombre de Migame</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Migames</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>