ProjectoPracticoISI/force-app/main/default/objects/Migame__c/fields/CuandoCompre__c.field-meta.xml
<CustomField>
    <fullName>CuandoCompre__c</fullName>
    <label>CuandoCompre</label>
    <required>true</required>
    <type>Date</type>
</CustomField>