ProjectoPracticoISI/force-app/main/default/objects/Migame__c/fields/CuandoVuelvoAcomprar__c.field-meta.xml
<CustomField>
    <fullName>CuandoVuelvoAcomprar__c</fullName>
    <label>CuandoVuelvoAcomprar</label>
    <type>Date</type>
</CustomField>